// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeButton accept jsx as children 1`] = `
<span
  className="css-19iuzmr"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  <span>
    string
  </span>
</span>
`;

exports[`BadgeButton danger 1`] = `
<span
  className="css-1fweprc"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  danger
</span>
`;

exports[`BadgeButton default 1`] = `
<span
  className="css-19iuzmr"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  default
</span>
`;

exports[`BadgeButton outline 1`] = `
<span
  className="css-wev54n"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  outline
</span>
`;

exports[`BadgeButton primary 1`] = `
<span
  className="css-cw412i"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  primary
</span>
`;

exports[`BadgeButton success 1`] = `
<span
  className="css-1jupaem"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  success
</span>
`;

exports[`BadgeButton warning 1`] = `
<span
  className="css-g29rpo"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  warning
</span>
`;
